--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
         "vue-qrcode-reader": "^5.4.1"
     }
 }
